# cmake-project-template

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  lint.yml
include/hello/: hello.hpp
scripts/: setup
src/: CMakeLists.txt  main.cpp
src/division/: CMakeLists.txt  division.cpp
src/hello/: CMakeLists.txt  hello.cpp
test/: CMakeLists.txt  test.cpp
